# Game

./: .gitignore  CMakeLists.txt
Space/: ActionTarget.inl  Aircraft.hpp  CMakeLists.txt  Enums.hpp  Game.hpp  Main.cpp  Notes.txt  Specification.txt  Statistic.cpp
Space/Include/: Enums.hpp  FieldsList.hpp  Game.hpp  GameObject.hpp  Map.hpp  Player.hpp  RandomizedMatrix.hpp  ResourceHolder.hpp  Score.hpp  Spaceship.hpp  Statistic.hpp  Tilemap.hpp
Space/Include/Graphics/: Area.hpp  Label.hpp  Widget.hpp
Space/Include/Utility/: Generator.hpp  ToString.hpp  ValueGenerator.hpp
Space/Source/: FieldsList.cpp  Game.cpp  GameObject.cpp  Map.cpp  Player.cpp  RandomizedMatrix.cpp  Score.cpp  Spaceship.cpp  Statistic.cpp  Tilemap.cpp
Space/Source/Graphics/: Area.cpp  Label.cpp  Widget.cpp
Space/Space/: CMakeLists.txt  Main.cpp
Space/Specification/: GUI.txt
Space/Unused_modules/: Frame.hpp  SceneNode.cpp  SceneNode.hpp  TextButton.cpp
Space/include/: ActionTarget.hpp  Button.hpp  Container.hpp  Label.hpp  Layout.hpp  ResourceHolder.hpp  Statistic.hpp  StringHelpers.hpp  TextButton.hpp  VLayout.hpp  Widget.hpp
Space/source/: Aircraft.cpp  Button.cpp  Frame.cpp  Game.cpp  Main.cpp  VLayout.cpp  Widget.cpp
game/: Application.cpp  Application.h  CMakeLists.txt  Main.cpp
game/application/: CMakeLists.txt
game/application/include/: Application.h
game/application/src/: Main.cpp
game/controller/: CMakeLists.txt
game/controller/include/: Controller.h  InputComponent.h  InputPlayer.h
game/controller/src/: Controller.cpp  InputComponent.cpp  InputPlayer.cpp
game/controller/test/: CMakeLists.txt
game/lib/: CMakeLists.txt
game/lib/controller/: CMakeLists.txt
game/lib/controller/button/: CMakeLists.txt
game/lib/controller/button/include/: Button.h
game/lib/controller/button/src/: Button.cpp
game/lib/controller/include/: Controller.h  PController.h
game/lib/controller/src/: Controller.cpp  PController.cpp
game/lib/controller/text/: CMakeLists.txt
game/lib/controller/text/include/: Text.h
game/lib/controller/text/src/: Text.cpp
game/lib/controller/window/: CMakeLists.txt
game/lib/controller/window/include/: Window.h
game/lib/controller/window/src/: Window.cpp
game/lib/controller/window/test/: CMakeLists.txt  Main.cpp
game/lib/model/: CMakeLists.txt
game/lib/model/application/: CMakeLists.txt
game/lib/model/application/include/: Application.h
game/lib/model/application/src/: Application.cpp
game/lib/model/application/test/: CMakeLists.txt  Main.cpp
game/lib/model/assets/: CMakeLists.txt
game/lib/model/assets/include/: Assets.h
game/lib/model/assets/src/: Assets.cpp
game/lib/model/engine/include/: Engine.h
game/lib/model/engine/src/: Engine.cpp
game/lib/model/include/: Assets.h  Engine.h  MovingLeftPlayerState.h  MovingRightPlayerState.h  Player.h  PlayerState.h  StandingPlayerState.h
game/lib/model/player/: CMakeLists.txt
game/lib/model/player/include/: MovingRightPlayerState.h  Player.h  PlayerState.h  StandingPlayerState.h
game/lib/model/player/src/: MovingLeftPlayerState.cpp  MovingRightPlayerState.cpp  Player.cpp  StandingPlayerState.cpp
game/lib/model/player/test/: CMakeLists.txt  Main.cpp
game/lib/model/positionable/: CMakeLists.txt
game/lib/model/positionable/include/: Position.h  Positionable.h
game/lib/model/positionable/src/: Positionable.cpp
game/lib/model/positionable/test/: CMakeLists.txt  Main.cpp
game/lib/model/positioned/: CMakeLists.txt
game/lib/model/positioned/include/: Positioned.h
game/lib/model/positioned/src/: Positioned.cpp
game/lib/model/spaceship/: CMakeLists.txt
game/lib/model/spaceship/src/: MSpaceship.cpp
game/lib/model/src/: Assets.cpp  Engine.cpp  MovingLeftPlayerState.cpp  MovingRightPlayerState.cpp  Player.cpp  StandingPlayerState.cpp
game/lib/utility/: CMakeLists.txt
game/lib/utility/drawable/: CMakeLists.txt
game/lib/utility/handable/: CMakeLists.txt
game/lib/utility/include/: Observer.h  Subject.h
game/lib/utility/observer/: CMakeLists.txt
game/lib/utility/position/: CMakeLists.txt
game/lib/utility/src/: Subject.cpp
game/lib/view/: CMakeLists.txt
game/lib/view/assets/: CMakeLists.txt
game/lib/view/include/: Map.h  Render.h  Spaceship.h
game/lib/view/spaceship/: CMakeLists.txt
game/lib/view/src/: Map.cpp  PRender.cpp  Render.cpp  Spaceship.cpp
game/model/: CMakeLists.txt
game/model/game/: CMakeLists.txt
game/model/game/include/: Game.h
game/model/include/: Assets.h  Engine.h  Enums.h  Game.h  GameObject.h  Model.h  Object.h  Player.h  ResourceHolder.h  Spaceship.h  Statistic.h
game/model/object/: CMakeLists.txt
game/model/object/include/: GameObject.h
game/model/player/: CMakeLists.txt
game/model/resourceholder/: CMakeLists.txt
game/model/spaceship/: CMakeLists.txt
game/model/spaceship/include/: Spaceship.h
game/model/src/: Assets.cpp  Engine.cpp  Game.cpp  GameObject.cpp  Model.cpp  Object.cpp  Player.cpp  Spaceship.cpp  Statistic.cpp
game/model/statistic/: CMakeLists.txt
game/model/statistic/include/: Statistic.h
game/model/test/: CMakeLists.txt
game/src/: Main.cpp
game/utility/: CMakeLists.txt
game/utility/generator/: CMakeLists.txt
game/utility/generator/include/: Generator.h
game/utility/include/: Generator.h  Matrix.h  Observable.h  Observer.h  RandomizedMatrix.h  Subject.h  ToString.h
game/utility/matrix/: CMakeLists.txt
game/utility/matrix/include/: RandomizedMatrix.h
game/utility/matrix/src/: RandomizedMatrix.cpp
game/utility/src/: Matrix.cpp  Observable.cpp  RandomizedMatrix.cpp
game/utility/test/: CMakeLists.txt
game/utility/tostring/: CMakeLists.txt
game/view/: CMakeLists.txt
game/view/include/: GraphicsComponent.h  Label.h  PRender.h  Render.h  RenderPlayer.h  Tilemap.h  View.h  Widget.h
game/view/label/: CMakeLists.txt
game/view/src/: GraphicsComponent.cpp  Label.cpp  Render.cpp  RenderPlayer.cpp  Tilemap.cpp  View.cpp  Widget.cpp
game/view/test/: CMakeLists.txt
game/view/tilemap/: CMakeLists.txt
game/view/widget/: CMakeLists.txt
game/view/widget/include/: Widget.h
(+67 files in other folders)
